# shwary-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  git-script.sh  pyproject.toml
examples/: README.md  fastapi_integration.py  flask_integration.py  simple_async.py  simple_sync.py
src/shwary/: __init__.py  core.py  exceptions.py  logger.py  logging_config.py  schemas.py  validators.py
src/shwary/clients/: __init__.py  async_client.py  base.py  sync.py
src/shwary/tests/: __init__.py  test_advanced.py  test_client.py  test_client_async.py  test_schemas.py  test_validators.py
