[project]
name = "shwary-python"
version = "1.0.1"
description = "SDK Python moderne (Async/Sync) pour l'API de paiement Shwary."
readme = "README.md"
authors = [
    { name = "Josué Luis Panzu", email = "josuepanzu8@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "phonenumbers>=9.0.22",
    "pydantic>=2.12.5",
]
license = { text = "MIT" }
keywords = ["shwary", "fintech", "payment", "mobile-money", "africa", "rdc", "kenya", "uganda"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"] # Erreurs, Flakes, et tris d'Imports

[tool.hatch.build.targets.sdist]
packages = ["src/shwary"]

[tool.hatch.build.targets.wheel]
packages = ["src/shwary"]
